# chatServer

./: CMakeLists.txt  README.md  autobuild.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: connectionPool.hpp  db.hpp
include/server/model/: UserModel.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: connectionPool.cpp  db.cpp  mysql.ini
src/server/model/: UserModel.cpp  friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp
src/server/redis/: redis.cpp
